--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,43 @@ a {
   height: 97px;
 }
 
+#list-cart span {
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+  font-size: 30px;
+  color: red;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  padding: 30px;
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.2);
+}
+form h2 {
+  font-size: 25px;
+  color: #a467be;
+}
+
+#total {
+  display: flex;
+  justify-content: center;
+}
+#total span {
+  font-size: 20px;
+  color: #3f2630;
+  display: flex;
+  justify-content: center;
+  font-family: "IBM Plex Sans", sans-serif;
+  padding: 20px;
+  margin: 30px;
+  border: 5px solid #f3e9f1;
+  width: max-content;
+}
+
 h1 {
   font-family: "Pacifico", cursive;
   font-size: 2em;
