--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -82,3 +82,41 @@ a {
   width: 160px;
   height: 97px;
 }
+
+#list-cart span {
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+  font-size: 30px;
+  color: red;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  padding: 30px;
+
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.2);
+  h2 {
+    font-size: 25px;
+    color: $color-secondary;
+  }
+}
+
+#total {
+  display: flex;
+  justify-content: center;
+  span {
+    font-size: 20px;
+    color: $color-primary-dark;
+    display: flex;
+    justify-content: center;
+    font-family: "IBM Plex Sans", sans-serif;
+    padding: 20px;
+    margin: 30px;
+    border: 5px solid $color-primary;
+    width: max-content;
+  }
+}
