--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,21 @@ form input {
   width: 100%;
 }
 
+#confirmation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid red;
+  width: 50%;
+  height: 120px;
+  margin: auto;
+  padding: 20px;
+}
+#confirmation span {
+  font-size: 1.5em;
+}
+
 h1 {
   font-family: "Pacifico", cursive;
   font-size: 2em;
