--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -124,3 +124,18 @@ form {
 form input {
   width: 100%;
 }
+
+#confirmation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid red;
+  width: 50%;
+  height: 120px;
+  margin: auto;
+  padding: 20px;
+  span {
+    font-size: 1.5em;
+  }
+}
