modify css and finish app

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   margin-top: 20px;
   justify-content: space-around;
   align-items: center;
+  padding: 2%;
 }
 .block-article .block-article__img {
   padding: 5px;
@@ -130,10 +131,9 @@ form input {
   justify-content: center;
   align-items: center;
   border: 5px solid red;
-  width: 50%;
-  height: 120px;
-  margin: auto;
+  margin: 5%;
   padding: 20px;
+  text-align: center;
 }
 #confirmation span {
   font-size: 1.5em;
@@ -141,7 +141,8 @@ form input {
 
 form p {
   display: flex;
-  width: 50%;
+  width: 100%;
+  flex-flow: wrap;
 }
 form p input {
   margin-left: 5%;
@@ -185,6 +186,8 @@ h2 {
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .btn:hover {
