--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -16,6 +16,8 @@
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .btn:hover {
   background: linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
